--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
-    <div class="gallery"></div>
-    <button type="button" class="load-more">Load more</button>
+    <section class="section">
+      <div class="container-form">
+        <form class="search-form" id="search-form">
+          <input
+            class="search-input"
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder=""
+          />
+          <label class="search__label" for="search-form"
+            >Search images...</label
+          >
+          <button type="submit" class="submit-btn">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </button>
+        </form>
+      </div>
+      <div class="gallery"></div>
+      <button type="button" class="load-more">Load more</button>
+    </section>
     <div class="progress" id="progress">
       <span class="progress-value" id="progress-value">&#x1F815;</span>
     </div>
